--- a/DOWTank/Web.config
+++ b/DOWTank/Web.config
@@ -16,6 +16,15 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="false" />
     <add key="UnobtrusiveJavaScriptEnabled" value="false" />
+    <add key="connString" value="Server=r3bk0ijsa8.database.windows.net;Database=TANK1DS;user id=schoonersa;password=$ch00ner%6;"/>
+    <add key="DBUserId" value="schoonersa"/>
+    <add key="DBPassword" value="$ch00ner%6"/>
+    <add key="DBName" value="TANK1DS"/>
+    <add key="DBServer" value="r3bk0ijsa8.database.windows.net"/>
+    <add key="CUDB-connString" value="Initial Catalog=CUDB;uid=CUDB_USER;pwd=Rj41T9vq;Data Source=BTTCLSQLTDB02\SQL02;;"/>
+    <add key="EMailServer" value="10.10.10.99"/>
+    <add key="MaxImageSize" value="1000000"/>
+    <add key="CUDB-SystemID" value="1"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
