--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -61,10 +61,6 @@
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankActivityHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankMaintMoveHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankSearch_spParams.cs" />
-    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_sel_EquipmentInfo_spParams.cs" />
-    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_sel_EquipmentOnHireHistory_spParams.cs" />
-    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_sel_EquipmentProduct_spParams.cs" />
-    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_sel_InvoiceList_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ChargeCodeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ChargeCodeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ContactDDL_spParams.cs" />
@@ -75,14 +71,21 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DispatchReasonDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DriverDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DriverDDL_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentInfo_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentOnHireHistory_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentProduct_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentSearch2_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentSearch2_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_Equipment_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_Equipment_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_FittingDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_FittingDDL_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_GroundedMatrix_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_InvoiceList_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_LoadStatusTypeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_LoadStatusTypeDDL_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_LocationDDL_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_LocationDDL_spParams_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_locationTreeALL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_locationTreeALL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_locationTreeFLAT_spParams.cs" />
