--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DispatchLastMove_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DispatchReasonDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DispatchReasonDDL_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_Dispatch_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_Dispatch_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DriverDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DriverDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentInfo_spParams.cs" />
