--- a/DOWTank/packages.config
+++ b/DOWTank/packages.config
@@ -7,6 +7,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="jQuery" version="2.1.3" targetFramework="net451" />
   <package id="jquery.datatables" version="1.10.5" targetFramework="net451" />
+  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
