--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditDrivers_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditDrivers_spResults.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditMissingMoves_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditMovesByUser_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_RequiresCleaning_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_RequiresMaint_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankActivityHistory_spParams.cs" />
@@ -97,6 +98,8 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_LocationTreeGrounded_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ProductDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ProductDDL_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityDDL_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ServiceTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_WasteClassTypeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_WasteClassTypeDDL_spResults.cs" />
