--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -420,6 +420,7 @@
     <Content Include="Scripts\jquery-2.1.3.min.map" />
     <Content Include="Views\Report\AuditDriverList.cshtml" />
     <Content Include="Views\Report\AuditMissingMoves.cshtml" />
+    <Content Include="Views\Report\AuditMovesByUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DOWTank.Core\DOWTank.Core.csproj">
