--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditDrivers_spResults.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditMissingMoves_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditMovesByUser_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditWarningMessages_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_RequiresCleaning_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_RequiresMaint_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankActivityHistory_spParams.cs" />
