--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -422,6 +422,7 @@
     <Content Include="Views\Report\AuditMissingMoves.cshtml" />
     <Content Include="Views\Report\AuditMovesByUser.cshtml" />
     <Content Include="Views\Report\AuditWarningMessages.cshtml" />
+    <Content Include="Views\Report\DedicatedTanks.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DOWTank.Core\DOWTank.Core.csproj">
