--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DOWTank.Core</RootNamespace>
     <AssemblyName>DOWTank.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -60,12 +61,15 @@
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditMovesByUser_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditWarningMessages_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_DedicatedTanks_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_IdleEquipment_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_InvoiceSummary_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_RequiresCleaning_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_RequiresMaint_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankActivityHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankCostToDate_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankMaintMoveHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankSearch_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_WasteExtract_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ChargeCodeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ChargeCodeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ContactDDL_spParams.cs" />
