--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditMovesByUser_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditWarningMessages_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_DedicatedTanks_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_EquipmentInventory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_IdleEquipment_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_InvoiceSummary_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_RequiresCleaning_spParams.cs" />
@@ -70,6 +71,8 @@
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankMaintMoveHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankSearch_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_WasteExtract_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_BarrelConditionTypeDDL_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_BarrelConditionTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ChargeCodeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ChargeCodeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ContactDDL_spParams.cs" />
@@ -82,11 +85,15 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_Dispatch_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DriverDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DriverDDL_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentClassTypeDDL_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentClassTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentInfo_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentOnHireHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentProduct_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentSearch2_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentSearch2_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentTypeDDL_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_EquipmentTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_Equipment_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_Equipment_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_FittingDDL_spParams.cs" />
@@ -103,6 +110,8 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_LocationTreeFLAT_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_LocationTreeGrounded_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_LocationTreeGrounded_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_MoveTypeDDL_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_MoveTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_OperatorDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_OperatorDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_OwnerDDL_spParams.cs" />
@@ -112,6 +121,8 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ServiceTypeDDL_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_TankGradeTypeDDL_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_TankGradeTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_WasteClassTypeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_WasteClassTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_upd\TANK_usp_upd_ArriveEquipment_spParams.cs" />
