--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -189,8 +189,6 @@
     <Content Include="Content\css\select2.png" />
     <Content Include="Content\css\select2x2.png" />
     <Content Include="Content\dataTables.bootstrap.css" />
-    <Content Include="Content\dataTables.editor.css" />
-    <Content Include="Content\dataTables.tableTools.css" />
     <Content Include="Content\DataTables\css\dataTables.autoFill.css" />
     <Content Include="Content\DataTables\css\dataTables.autoFill.min.css" />
     <Content Include="Content\DataTables\css\dataTables.bootstrap.css" />
@@ -246,6 +244,8 @@
     <Content Include="Content\DataTables\images\xls_hover.png" />
     <Content Include="Content\DataTables\swf\copy_csv_xls.swf" />
     <Content Include="Content\DataTables\swf\copy_csv_xls_pdf.swf" />
+    <Content Include="Content\JqGrid\ui.jqgrid-bootstarp.css" />
+    <Content Include="Content\JqGrid\ui.jqgrid.css" />
     <Content Include="Content\jquery.datetimepicker.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
@@ -301,12 +301,10 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\dataTables.responsive.css" />
     <Content Include="Scripts\dataTables.bootstrap.js" />
-    <Content Include="Scripts\dataTables.editor.js" />
     <Content Include="Scripts\dataTables.responsive.js" />
     <Content Include="Content\DataTables\css\dataTables.responsive.scss" />
     <Content Include="Content\DataTables\css\dataTables.jqueryui.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
-    <Content Include="Scripts\dataTables.tableTools.js" />
     <Content Include="Scripts\DataTables\dataTables.autoFill.js" />
     <Content Include="Scripts\DataTables\dataTables.autoFill.min.js" />
     <Content Include="Scripts\DataTables\dataTables.bootstrap.js" />
@@ -331,7 +329,47 @@
     <Content Include="Scripts\DataTables\jquery.dataTables.js" />
     <Content Include="Scripts\DataTables\jquery.dataTables.min.js" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
-    <Content Include="Scripts\editor.bootstrap.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-ar.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-bg.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-ca.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-cn.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-cs.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-de.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-dk.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-el.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-en.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-es.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-fa.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-fi.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-fr.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-gl.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-he.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-hr.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-hu.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-id.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-is.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-it.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-ja.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-kr.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-lt.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-me.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-nl.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-no.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-pl.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-pt-br.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-pt.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-ro.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-ru.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-sk.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-sr-latin.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-sr.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-sv.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-th.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-tr.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-tw.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-ua.js" />
+    <Content Include="Scripts\JqGrid\i18n\grid.locale-vi.js" />
+    <Content Include="Scripts\JqGrid\jquery.jqGrid.min.js" />
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Scripts\jquery-ui-1.11.4.js" />
