--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -171,6 +171,12 @@
     <Compile Include="Models\TankArrivalUpdatePostModel.cs" />
     <Compile Include="Models\TankPrepPostModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\crDailyDispatch.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>crDailyDispatch.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Reports\crDailyDriverActivity.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -469,6 +475,7 @@
     <Content Include="Views\Report\InvoiceSummary.cshtml" />
     <Content Include="Views\Report\FacilityEquipment.cshtml" />
     <Content Include="Views\Admin\Contacts.cshtml" />
+    <Content Include="Views\Report\DailyDispatch.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DOWTank.Core\DOWTank.Core.csproj">
@@ -483,6 +490,10 @@
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Reports\crDailyDispatch.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>crDailyDispatch.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\crDailyDriverActivity.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>crDailyDriverActivity.cs</LastGenOutput>
