--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -61,18 +61,25 @@
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditMissingMoves_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditMovesByUser_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_AuditWarningMessages_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_ChassisActivity_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_ChassisLastPosition_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_DailyDispatch_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_DedicatedTanks_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_DriverActivity_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_EquipmentInventory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_IdleEquipment_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_InvoiceSummary_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_LastTankMove_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_RequiresCleaning_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_RequiresMaint_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankActivityHistory_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankActivity_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankCostToDate_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankMaintMoveHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankSearch_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankShipmentSchedule_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_WasteExtract_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_YardCheck_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_BarrelConditionTypeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_BarrelConditionTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ChargeCodeDDL_spParams.cs" />
