--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ContactDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ContactDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ContactUPD_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DeletedMoves_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DispatchLastMove_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DispatchLastMove_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_DispatchReasonDDL_spParams.cs" />
