--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -520,6 +520,7 @@
     <Content Include="Views\Report\TankActivity.cshtml" />
     <Content Include="Views\Report\YardCheck.cshtml" />
     <Content Include="Views\Admin\RecoverDeletedMoves.cshtml" />
+    <Content Include="Views\Admin\Equipment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DOWTank.Core\DOWTank.Core.csproj">
