--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -536,6 +536,7 @@
     <Content Include="Views\Admin\WasteClass.cshtml" />
     <Content Include="Views\Admin\RecoverDeletedMoves.cshtml" />
     <Content Include="Views\Admin\Equipment.cshtml" />
+    <Content Include="Views\Admin\ProductMaster.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DOWTank.Core\DOWTank.Core.csproj">
