--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -538,6 +538,8 @@
     <Content Include="Views\Admin\Equipment.cshtml" />
     <Content Include="Views\Admin\ProductMaster.cshtml" />
     <Content Include="Views\Admin\ProductMasterIndex.cshtml" />
+    <Content Include="Views\Admin\UserProfile.cshtml" />
+    <Content Include="Views\Admin\SecurityProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DOWTank.Core\DOWTank.Core.csproj">
