--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -160,6 +160,8 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ProductList_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityDDL_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityProfilePrivileges_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityProfilePrivileges_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityProfile_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ServiceTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_TankConstructionUpd_spParams.cs" />
