--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -66,6 +66,10 @@
     <Reference Include="Microsoft.Owin">
       <HintPath>..\packages\Microsoft.Owin.3.0.1\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.3.0.1\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Owin.Security">
       <HintPath>..\packages\Microsoft.Owin.Security.3.0.1\lib\net45\Microsoft.Owin.Security.dll</HintPath>
     </Reference>
@@ -220,7 +224,9 @@
       <DependentUpon>crYardCheck.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Utility\ClaimExtension.cs" />
     <Compile Include="Utility\CrystalReportPdfResult.cs" />
+    <Compile Include="Utility\UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -541,6 +547,7 @@
     <Content Include="Views\Admin\ProductMasterIndex.cshtml" />
     <Content Include="Views\Admin\UserProfile.cshtml" />
     <Content Include="Views\Admin\SecurityProfile.cshtml" />
+    <Content Include="Views\Admin\UserIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DOWTank.Core\DOWTank.Core.csproj">
