--- a/DOWTank/Web.config
+++ b/DOWTank/Web.config
@@ -25,7 +25,7 @@
     <add key="EMailServer" value="10.10.10.99" />
     <add key="MaxImageSize" value="1000000" />
     <add key="CUDB-SystemID" value="1" />
-    <add key="owin:AutomaticAppStartup" value="false"/>
+    <add key="owin:AutomaticAppStartup" value="true"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
