--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_TankShipmentSchedule_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_WasteExtract_spParams.cs" />
     <Compile Include="Domain\TANK_usp_rpt\TANK_usp_rpt_YardCheck_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_Login_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_BarrelConditionTypeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_BarrelConditionTypeDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ChargeCodeDDL_spParams.cs" />
