permission list for the page

--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -190,6 +190,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DOWTankDataModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Enum\SecurityCatEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\PasswordService.cs" />
     <Compile Include="Service\UtilityService.cs" />
