--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_DispatchReasonType_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_DispatchTank_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_Driver_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_EquipmentOnHireHistory_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_EquipmentType_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_FacilityParameter_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_Fitting_spParams.cs" />
@@ -153,6 +154,7 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_MovementTypeUpd_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_MoveTypeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_MoveTypeDDL_spResults.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_OnHireReasonTypeDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_OnHireReasonTypeUPD_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_OperatorDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_OperatorDDL_spResults.cs" />
