--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /DOWTank.v11.suo
 /DOWTank.suo
 /DOWTank.Core/DOWTank.Core.csproj.user
+/DOWTank.BackgroundService/obj
+/DOWTank.BackgroundService/bin
+/DowTank.BackgroundServiceTester/bin
+/DowTank.BackgroundServiceTester/obj
