--- a/DOWTank/DOWTank.csproj
+++ b/DOWTank/DOWTank.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="Utility\ClaimExtension.cs" />
     <Compile Include="Utility\CrystalReportPdfResult.cs" />
+    <Compile Include="Utility\PasswordService.cs" />
     <Compile Include="Utility\SecurityExtended.cs" />
     <Compile Include="Utility\UserManager.cs" />
     <Compile Include="Utility\Utility.cs" />
