--- a/DOWTank.Core/DOWTank.Core.csproj
+++ b/DOWTank.Core/DOWTank.Core.csproj
@@ -70,8 +70,10 @@
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_Operator_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_Owner_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_ProductLocation_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_SecurityLocation_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_SecurityProfilePrivilege_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_SecurityProfile_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_Security_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_TankConstructionType_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_TankPrep_spParams.cs" />
     <Compile Include="Domain\TANK_usp_insupd\TANK_usp_insupd_Vendor_spParams.cs" />
@@ -171,6 +173,7 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityDDL_spResults.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityLocationALL_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityProfileDDL_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_Security_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityLocation_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_SecurityProfilePrivileges_spParams.cs" />
@@ -188,6 +191,7 @@
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_ProDetails_spParams.cs" />
     <Compile Include="Domain\TANK_usp_sel\TANK_usp_sel_WasteClassUpd_spParams.cs" />
     <Compile Include="Domain\TANK_usp_upd\TANK_usp_del_OnHireHistory_spParams.cs" />
+    <Compile Include="Domain\TANK_usp_upd\TANK_usp_del_SecurityLocation_spParams.cs" />
     <Compile Include="Domain\TANK_usp_upd\TANK_usp_upd_ArriveEquipment_spParams.cs" />
     <Compile Include="Domain\TANK_usp_upd\TANK_usp_upd_SecurityDefaultLocation_spParams.cs" />
     <Compile Include="DOWTankDataModel.Context.cs">
